--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -39,6 +39,15 @@ const REDBUBBLE_PROFILE_URL = "https://www.redbubble.com/people/SamFrederiksen/s
     <!-- Public asset served by Astro from /public/styles/global.css -->
     <link rel="stylesheet" href={`${base}/styles/global.css`} />
 <meta name="google-site-verification" content="R7O3CfxGVvxQmoYnaKRl21mB7TsX8jjZqZ-3WdfWl2w" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VTE0TXN83Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VTE0TXN83Y');
+</script>
   </head>
 
   <body>
