--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 const {
-  title = "Solara Meridian Studio @ RedBubble",
+  title = "Solara Meridian Studio",
   description = "",
 } = Astro.props;
 
