--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -169,7 +169,7 @@ const featuredArtworks = [
             target="_blank"
             rel="noopener noreferrer"
           >
-            RedBubble profile
+           Open the Redbubble Shop
           </a>
         </div>
 
